--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "devCss": "tailwindcss -i ./public/css/input.css -o ./public/css/app.css --watch"
   },
   "dependencies": {
     "axios": "^1.6.2",
