--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "devCss": "tailwindcss -i ./public/css/input.css -o ./public/css/app.css --watch"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
